[gd_scene load_steps=3 format=3 uid="uid://biolw4bbgufr6"]

[ext_resource type="Texture2D" uid="uid://2yaaik23rmjo" path="res://Images/Space Game Img 2.png" id="1_brksa"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_tytf2"]

[node name="Main_Menu" type="Node2D"]
script = ExtResource("1_tytf2")

[node name="BackgroundTexture" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_brksa")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 43.0
offset_top = 126.0
offset_right = 224.0
offset_bottom = 329.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Btn-FlyShip" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Space"

[node name="Btn-BuildShip" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ship Builder"

[node name="Btn-Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Btn-FlyShip" to="." method="_on_btn_fly_ship_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Btn-BuildShip" to="." method="_on_btn_build_ship_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Btn-Quit" to="." method="_on_btn_quit_pressed"]
